--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>They do everything with their voices!</p>
     </div>
     <div class="youtube">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lRNYp1IiUuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HpfjuFtgcrI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="menu">
         <a href="statistics.html"><input type="button" value="statistics"></a>
